# Hospital-Management-System-OOP

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  hospital management.sln
hospital management/: Hospital.h  hospital management.vcxproj  hospital management.vcxproj.filters
include/: Hospital.h
src/: Hospital.cpp  main.cpp
